server/routes updates started

--- a/public/aboutme.html
+++ b/public/aboutme.html
@@ -9,10 +9,6 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/aboutme.css">
     <link rel="stylesheet" href="./assets/css/para.css">
-
-
-
-
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
 
     <title>Document</title>
@@ -36,22 +32,19 @@
                         </li>
                         <!-- change the below class to stop getting larger on hover-->
                         <li class="nav-item">
-                            <a class="nav-link" href="about-link">Home
+                            <a class="nav-link" href="/">Home
                         
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="programming">About Me</a>
+                            <a class="nav-link" href="/aboutme">About Me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="portolio">Tech Portfolio</a>
+                            <a class="nav-link" href="/techPortfolio">Tech Portfolio</a>
                             <span class="sr-only">(current)</span>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="portolio">Art Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="portolio">Resume</a>
+                            <a class="nav-link" href="/artPortfolio">Art Portfolio</a>
                         </li>
                     </ul>
                 </div>
