--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/para.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/navbar.css">
 
 
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
@@ -24,30 +25,25 @@
         <!-- then make a container so the text is in from the edge -->
         <div class="container">
             <!-- <a class="navbar-brand brand-name navbar-fixed-top"></a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+            <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarNavDropdown"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav full-list">
                     <!-- below will need links actually -->
                     <li class="nav-item active">
-                        <a class="nav-link" href="about-link">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
+                        <a class="nav-link nav-style" href="about-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="programming">About Me</a>
+                        <a class="nav-link nav-style" href="programming">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portolio">Tech Portfolio</a>
+                        <a class="nav-link nav-style" href="portolio">Tech Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portolio">Art Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portolio">Resume</a>
+                        <a class="nav-link nav-style" href="portolio">Art Portfolio</a>
                     </li>
                 </ul>
             </div>
