--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+        <head profile="http://www.w3.org/2005/10/profile">
+            <link rel="icon"
+            type="image/png"
+            href="./assets/img/favicon.png"/> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -67,11 +70,11 @@
             <div class="col-md-7">
                     <div class="header lead-body about-link indextitle">About Jennifer
                         </div>
-                    <h3>Web designer, artist, cooking enthusist, music junky.</h3>  
-                <p class="paragraph-details">Read more for a general overview of interests and background of Jennifer Artschwager.
+                    <h3>Web designer, artist, cooking enthusist <br>& music junky.</h3>  
+                <p class="paragraph-details">Get a general overview of interests and background of Jennifer Artschwager.
                     <br>
                 </p>
-                <a href="/public/aboutme.html" target="_blank" class="btn home-pg-btn btnCustom float-center">Learn More</a>
+                <a href="/aboutme" class="btn home-pg-btn btnCustom float-center">Click here to Learn More</a>
             </div>
         </div>
     </div>
@@ -88,12 +91,12 @@
             <div class="col-md-7">
                     <div class="header lead-body about-link float-center">Tech Portfolio
                     </div>
-                <h3>Freelance and Project work</h3>
-                <p class="paragraph-details">Explore sites created for clients or as personal projects to explore new libraries, languages, or packages that interest me.
+                <h3>Freelance and Project Work</h3>
+                <p class="paragraph-details">Explore sites created for clients or as personal projects to explore new libraries, languages, and packages that interest me.
                     <br>
                 </p>
                 <!-- add href below -->
-                <a href="/public/techPort.html" target="_blank" class="btn home-pg-btn btnCustom float-center">Learn More</a>
+                <a href="/techPortfolio" class="btn home-pg-btn btnCustom float-center">Learn More & View the Code</a>
             </div>
         </div>
     </div>
@@ -115,10 +118,10 @@
                         <div class="header lead-body about-link float-center">Art Portfolio
                         </div>
                     <h3>Fine arts and Photoshop</h3>
-                    <p class="paragraph-details">View a few samples of different art pieces including oil paintings, acyrlic, mix media, and computer art. 
+                    <p class="paragraph-details">View a few samples of different art pieces including oil paintings, acyrlic, mix media and computer art. 
                         <br>
                     </p>
-                    <a href="/public/techPort.html" target="_blank" class="btn home-pg-btn btnCustom float-center">Learn More</a>
+                    <a href="/artPortfolio" class="btn home-pg-btn btnCustom float-center">Click Here toLearn More</a>
                 </div>
             </div>
         </div>
