--- a/public/techPort.html
+++ b/public/techPort.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+        <head profile="http://www.w3.org/2005/10/profile">
+            <link rel="icon"
+            type="image/png"
+            href="./assets/img/favicon.png"/> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -11,7 +14,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Artschwager</title>
 </head>
 <body>
 
@@ -120,7 +123,7 @@
                         <div class="cardStyleR">
                             <div class="card-body">
                                 <h5 class="card-title thin-lead-text">JSJ Swim</h5>
-                                <p class="card-text">JSJ Swim is a website for swim lessons which uses Foundation along with CSS and JS for the front end.  The backend is Node.js with MySQL database holding all administrator and user login information.
+                                <p class="card-text">JSJ Swim is a website for swim lessons which uses Foundation along with CSS and Java Script with JQuery for the front end.  The backend is Node.js with MySQL database holding all administrator and user login information.
                                 </p>
                                 <a href="https://cryptic-reef-56276.herokuapp.com/" target="_blank" class="btn btnSite btnCustom float-right">View the site</a>
                                 <a href="https://github.com/JArtschwager/JSJSwimSignUps" target="_blank" class="btn btnGithub btnCustom float-right">View the code</a>
@@ -155,7 +158,7 @@
              <div class="row rowStyling">
                     <div class="col-md-4">
                         <div id="port-image-2" style="width: 20rem;">
-                            <img class="card-img-top" src="./assets/img/doJerseyimage.png">
+                            <img class="card-img-top" src="./assets/img/catinbox.png">
                             <div class="card-block">
                             </div>
                         </div>
@@ -165,7 +168,7 @@
                         <div class="cardStyleR">
                             <div class="card-body">
                                 <h5 class="card-title thin-lead-text">Cat in the Box Memory Game</h5>
-                                <p class="card-text">Using react, this memory game was a practice in... add text here? </p>
+                                <p class="card-text">Using react, this memory game was a practice in full MERN stack.  Using mongoDB, Express, React and Node.  </p>
                                 <a href="https://jartschwager.github.io/ReactGame/" target="_blank" class="btn btnSite btnCustom float-right">View the site</a>
                                 <a href="https://github.com/JArtschwager/ReactGame" target="_blank" class="btn btnGithub btnCustom float-right">View the code</a>
                             </div>
