--- a/public/aboutme.html
+++ b/public/aboutme.html
@@ -60,7 +60,7 @@
 
     <div class="container">
         <div class="row">
-        <h1 class="header lead-body thin-lead-text">Web Designer, Artist, Cooking Enthusiast, Music Junky </h1>
+        <h1 class="header lead-body thin-lead-text">Web Designer, Artist, Cooking Enthusiast</h1>
       </div>
         <div class="row rowStyling">
             <div class="col-md-4">
