--- a/public/artPort.html
+++ b/public/artPort.html
@@ -242,7 +242,7 @@
                                     </div>
                             <div class="col-md-4">
                                     <div class="cardStyleL" id="port-image-2">
-                                        <img class="card-img-top" id="myImg" src="./assets/img/selfport.Jpeg" alt="boy and his dog">
+                                        <img class="card-img-top" id="myImg" src="./assets/img/selfportpaint.jpeg" alt="self portrait">
                                         <div class="card-block">
                                         </div>
                                     </div>
