--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./assets/css/para.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/navbar.css">
+    <link rel="stylesheet" href="./assets/css/mobile.css">
 
 
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
@@ -20,33 +24,31 @@
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg nav text-light nav-color nav-home">
-
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarNavDropdown"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav">
+        <nav class="navbar navbar-expand-lg nav-color nav-home">
+                <div class="container">
+                    <a class="navbar-brand text-light nav-about" href="#"></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/">Home</a>
+                          <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/aboutme">About Me</a>
+                          <a class="nav-link" href="/aboutme">About Me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="/techPortfolio">Tech Portfolio</a>
+                          <a class="nav-link" href="/techPortfolio">Tech Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/artPortfolio">Art Portfolio</a>
+                          <a class="nav-link" href="/artPortfolio">Art Portfolio</a>
                         </li>
-                    </ul>
-                </div>
-        </div>
-    </nav>
+                      </ul>
+                    </div>
+                    </div>
+                </nav>
+    
 
     <!-- 1st background image -->
     <div class="parallax first-parallax">
@@ -141,19 +143,18 @@
             <div class="container">
                 <span class="spacer"></span>
                 <div class="linkimages">
-                    <a href="https://www.linkedin.com/in/jartschwager/" target="_blank">
+                    <a href="https://www.linkedin.com/in/jartschwager/" target="_blank" class="link-line">
                         <img class="imagesize" border="0" alt="Github account" src="./assets/img/linkedin.png">
                     </a>
                 </div>
                 <span class="spacer"></span>
                 <div class="linkimages">
-
-                    <a href="mailto:Jennifer@artschwager.com">
+                    <a href="mailto:Jennifer@artschwager.com" class="link-line">
                         <img class="imagesize" border="0" alt="email link" src="./assets/img/email.png">
                     </a>
                 </div>
                 <div class="linkimages">
-                    <a href="https://github.com/JArtschwager" target="_blank">
+                    <a href="https://github.com/JArtschwager" target="_blank" class="link-line">
                         <img class="imagesize" border="0" alt="Github account" src="./assets/img/github.png">
                     </a>
                 </div>
