--- a/public/techPort.html
+++ b/public/techPort.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./assets/css/techPort.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/navbar.css">
@@ -18,34 +21,30 @@
 </head>
 <body>
 
-        <nav class="navbar navbar-expand-lg nav text-light nav-color nav-tech">
-
-                <!-- then make a container so the text is in from the edge -->
+        <nav class="navbar navbar-expand-lg nav-color nav-tech">
                 <div class="container">
-                    <!-- <a class="navbar-brand brand-name navbar-fixed-top"></a> -->
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarNavDropdown"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                    <a class="navbar-brand text-light nav-about" href="#"></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
                     </button>
-        
-                    <div class="collapse navbar-collapse">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/aboutme">About Me</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="/techPortfolio">Tech Portfolio</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/artPortfolio">Art Portfolio</a>
-                                </li>
-                            </ul>
-                        </div>
-                </div>
-            </nav>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="/aboutme">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="/techPortfolio">Tech Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="/artPortfolio">Art Portfolio</a>
+                        </li>
+                      </ul>
+                    </div>
+                    </div>
+                </nav>
 
 
     <div class="parallax techBannerImage">
@@ -196,25 +195,23 @@
 
             <!-- links to etsy, and email -->
             <div class="container">
-                
                 <span class="spacer"></span>
                 <div class="linkimages">
-                        <a href="https://www.linkedin.com/in/jartschwager/" target="_blank">
-                            <img class="imagesize" border="0" alt="Github account" src="./assets/img/linkedin.png">
-                        </a>
-                    </div>
-                    <span class="spacer"></span>
+                    <a href="https://www.linkedin.com/in/jartschwager/" target="_blank" class="link-line">
+                        <img class="imagesize" border="0" alt="Github account" src="./assets/img/linkedin.png">
+                    </a>
+                </div>
+                <span class="spacer"></span>
                 <div class="linkimages">
-
-                    <a href="mailto:Jennifer@artschwager.com">
+                    <a href="mailto:Jennifer@artschwager.com" class="link-line">
                         <img class="imagesize" border="0" alt="email link" src="./assets/img/email.png">
                     </a>
                 </div>
                 <div class="linkimages">
-                        <a href="https://github.com/JArtschwager" target="_blank">
-                            <img class="imagesize" border="0" alt="Github account" src="./assets/img/github.png">
-                        </a>
-                    </div>
+                    <a href="https://github.com/JArtschwager" target="_blank" class="link-line">
+                        <img class="imagesize" border="0" alt="Github account" src="./assets/img/github.png">
+                    </a>
+                </div>
             </div>
             <p class="copyright">Jennifer Artschwager 2018 </p>
         </div>
