--- a/public/techPort.html
+++ b/public/techPort.html
@@ -24,8 +24,13 @@
         <nav class="navbar navbar-expand-lg nav-color nav-tech">
                 <div class="container">
                     <a class="navbar-brand text-light nav-about" href="#"></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
+                    <button class="navbar-toggler burger" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <div class="burger-container" onclick="xFunction(this)">
+                            <div class="custom-burger-1"></div>
+                            <div class="custom-burger-2"></div>
+                            <div class="custom-burger-3"></div>
+                      </div>
+
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                       <ul class="navbar-nav">
@@ -45,6 +50,7 @@
                     </div>
                     </div>
                 </nav>
+    
 
 
     <div class="parallax techBannerImage">
