--- a/public/aboutme.html
+++ b/public/aboutme.html
@@ -127,7 +127,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title home-text"> Eat Well</h5>
                                     <h2 class="mainboxtitle">You need to fuel your brain, why not enjoy the process?</h2>
-        <p>Inspired by food allergies, I soon realized frozen foods and TGIF friday would never again be an option in my life.  This began a lifelong love for cooking food from scratch, often inspired by the Italian grandmothers of close friends and my travels abroad.</p>
+        <p>Inspired by food allergies, I began a lifelong love for cooking food from scratch, often inspired by the Italian grandmothers of close friends and my travels abroad.</p>
                                 </div>
                             </div>
                         </div>
@@ -135,7 +135,7 @@
 
         <div class="row">
             <div class="col-md-4">
-                <div class="card" id="port-image-1" style="width: 20rem;">
+                <div class="card card-spacer" id="port-image-1" style="width: 20rem;">
                     <img class="card-img-top" src="./assets/img/orzo.JPG" alt="Chicken Orzo">
                     <div class="card-block card-styles">
                         <h4 class="card-title interesttitle">Chicken Orzo</h4>
@@ -144,7 +144,7 @@
             </div>
 
             <div class="cold-md-4">
-                <div class="card" id="port-image-2" style="width: 20rem;">
+                <div class="card card-spacer" id="port-image-2" style="width: 20rem;">
                     <img class="card-img-top" src="./assets/img/spaghetti.JPG" alt="assorted calf and kid keychains">
                     <div class="card-block card-styles">
                         <h4 class="card-title interesttitle">Handmade fettuccine</h4>
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <div class="cold-md-4">
-                    <div class="card" id="port-image-3" style="width: 20rem;">
+                    <div class="card card-spacer" id="port-image-3" style="width: 20rem;">
                         <img class="card-img-top" src="./assets/img/brushetta.JPG" alt="women in marker drawing">
                         <div class="card-block card-styles">
                             <h4 class="card-title interesttitle">Sausage Bruschetta</h4>
