--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
 
 
     <!-- second time doing parrallax /about me-->
-    <div class="container">
+    <div class="container spacer-home">
         <div class="row">
             <div class="col-md-5">
                 <img class="selfport" src="./assets/img/selfportbranded.jpg" alt="Image of Jennifer">
@@ -90,7 +90,7 @@
     <div class="second-parallax">
     </div>
     <!-- tech port - para 3 -->
-<div class="techPortRow">
+<div class="techPortRow spacer-home">
     <div class="container">
         <div class="row">
             <div class="col-md-5">
@@ -118,7 +118,7 @@
 
     <!-- art port - para 4 -->
     <div class="container">
-            <div class="row">
+            <div class="row spacer-home">
                 <div class="col-md-5">
                     <img class="selfport" src="./assets/img/flowers.jpg" alt="Image of Jennifer">
                 </div>
